Search process working